schema/testdata/validation_attribute_on_invalid_action_type_args/schema.keel
model Account {
    fields {
        name Text
    }

    operations {
        create createAccount() with (name)
    }

    @on()
    @on([123], verifyEmail)
    @on(create, verifyEmail)
    @on((create), verifyEmail)
    @on([nope], verifyEmail)
    @on([create.sd, nope], verifyEmail)
    @on([list, get], verifyEmail)
}